--- a/hotellingmarkup_01/templates/hotellingmarkup_01/task.html
+++ b/hotellingmarkup_01/templates/hotellingmarkup_01/task.html
@@ -19,9 +19,13 @@
 </style>
 <table class="tg table-striped">
   <tr>
-    <th class="tg-031e" colspan="4">
+    <th class="tg-031e" colspan="2">
 
         <h2>Subperiod timer: <font color="red"><div style="display: inline" id="countdown"></div></font>
+
+    </th>
+    <th class="tg-031e" style="text-align:right" colspan="2">
+         <h2 >Score so far: {{cumulative_round_payoff|floatformat:"3"}}
 
     </th>
   </tr>
@@ -115,26 +119,26 @@ function draw(my_p_) {
     // setup variables
     var my_p = {{ my_prev_price}};
     if (my_p_ != undefined) {
-        my_p = (Number(my_p_)).toFixed(2);
+        my_p = Number(my_p_).toFixed(2);
     }  
-    var my_l = (Number({{my_loc}})).toFixed(2);
-    var other_p = {{other_prev_price}};
-    var other_l = {{other_loc}};
+    var my_l = Number({{my_loc}}).toFixed(2);
+    var other_p = Number({{other_prev_price}}).toFixed(2);
+    var other_l = Number({{other_loc}}).toFixed(2);
     var t = 1;
-    var intersection = (Number(my_p_));
+    var intersection = Number(my_p_);
     var market_share = "";
 
     // Calc payoff info 
     if (my_l == 0.25){
-        intersection = (t *(other_l)+(other_p) + t * (my_l) - (my_p)) / (2*t);
-        if (intersection >= other_l) {
+        intersection = (t *Number(other_l)+Number(other_p) + t * Number(my_l) - Number(my_p)) / (2*t);
+        if (intersection > 0.75) {
             pi_1 = 1 * my_p;
             pi_2 = 0;
             boundary = 1;
             market_share = "0 to 1";
             boundary_lo = 0;
             boundary_hi = 1;
-          } else if (intersection <= my_l){
+          } else if (intersection < 0.25){
             // # is p2 priced so low as to win the market?
             pi_1 = 0;
             pi_2 = 1 * other_p;
@@ -149,40 +153,41 @@ function draw(my_p_) {
             pi_2 = other_p * (1 - intersection);
             boundary = intersection;
             market_share =  "0 to " + boundary.toFixed(2);
-            boundary_lo = intersection;
-            boundary_hi = 1; 
+            boundary_lo = 0;
+            boundary_hi = intersection; 
           }
 
     }
 
-    if ({{my_loc}} == 0.75){
+    if (my_l == 0.75){
         // if I am player2:
-        intersection = (((t*(my_l))) + Number(my_p) + (t * (other_l)) - (other_p)) / (2*t);
-        if (intersection >= my_l) {
-            pi_2 = 1 * other_l;
+        intersection = (t*Number(my_l) + Number(my_p) + t * Number(other_l) - Number(other_p)) / (2*t);
+        if (intersection > 0.75) {
+            pi_2 = 1 * Number(other_l);
             pi_1 = 0;
             boundary = 1;
             market_share = "None";
             boundary_lo = 0;
             boundary_hi = 0;
-          } else if (intersection <= other_l){
+          } else if (intersection < 0.25){
             // # is p2 priced so low as to win the market?
             pi_2 = 0;
-            pi_1 = 1 * my_p;
+            pi_1 = 1 * Number(my_p);
             boundary = 0;
             market_share = "0 to 1";
             boundary_lo = 0;
             boundary_hi = 1;
+          
           } else {
             // # else, they share market, 
             // # find intersection: 
-            pi_2 = other_p * intersection;
-            pi_1 = my_p * (1 - intersection);
+            pi_2 = Number(other_p) * intersection;
+            pi_1 = Number(my_p) * (1 - intersection);
             boundary = intersection;
             market_share = boundary.toFixed(2) + " to 1 ";
-            boundary_lo = 0;
-            boundary_hi = Intersection;
-          }
+            boundary_lo = intersection;
+            boundary_hi = 1;
+            }
     }
 
 
@@ -206,28 +211,87 @@ function draw(my_p_) {
     ctx.fillRect(0,0,wdt,wdt);
     ctx.clearRect(mrg,mrg,(wdt-2*mrg),(wdt-2*mrg));
 
-    // p1
+
+    if (my_l == 0.75){
+        var p1_l = 0.25,
+            p1_p = other_p,
+            p2_l = 0.75,
+            p2_p = my_p;
+    } else {
+        var p1_l = 0.25,
+            p1_p = my_p,
+            p2_l = 0.75,
+            p2_p = other_p;
+            
+    }
+
+    var p1_x = (mrg + ((wdt-2*mrg)) * p1_l); // y coord for p1
+    var p1_y = mrg + (wdt-2*mrg) - ((wdt-2*mrg) * p1_p); // x coord for p1
+    var p2_x = (mrg + ((wdt-2*mrg)) * p2_l); // y coord for p2
+    var p2_y = mrg + (wdt-2*mrg) - ((wdt-2*mrg) * p2_p); // x coord for p2
+    
+    // draw profit area 
+    // see payoff cal section
+    ctx.fillStyle = "rgba(165, 192, 255,0.25)";
+    if (my_l == 0.75){
+        ctx.fillRect(
+            mrg + boundary_lo * (wdt-2*mrg),
+            p2_y, 
+            (wdt-2*mrg)*(boundary_hi-boundary_lo),
+            p2_p * (wdt-2*mrg));
+    } else {
+        ctx.fillRect(
+            mrg + boundary_lo * (wdt-2*mrg), 
+            p1_y, 
+            (wdt-2*mrg)*(boundary_hi-boundary_lo), 
+            my_p * (wdt-2*mrg));
+            
+    }
+    ctx.fillStyle = "#2d2d2d"; 
+
+    // p1 
+    ctx.setLineDash([0,0]); // no dashed lines
     ctx.strokeStyle = "#424242";
-    var p1_x = (mrg + ((wdt-2*mrg)) * {{my_loc}});
-    var p1_y = (wdt-2*mrg) - ((wdt-4*mrg) * my_p);
+
     ctx.beginPath();
     ctx.moveTo((p1_x + 5), p1_y);
     ctx.arc(p1_x, p1_y, 5,0,Math.PI*2,true);  // Left eye
     ctx.stroke();
 
-    var p2_x = (mrg + ((wdt-2*mrg)) * {{other_loc}});
-    var p2_y = (wdt-2*mrg) - ((wdt-4*mrg) * {{other_prev_price}});
     ctx.beginPath();
-    ctx.moveTo(p2_x+5,p2_y);
+    ctx.moveTo(p2_x + 5, p2_y);
     ctx.arc(p2_x,p2_y,5,0,Math.PI*2,true);  // Right eye
     ctx.stroke();
 
-    // boundary/intersection line
-    ctx.strokeStyle = "#ada9a9";
+    // draw transport cost lines
+    // p1 trans cost
+    ctx.strokeStyle = "#ada9a9"; 
+    ctx.setLineDash([0,0]); // no dashed lines
     ctx.beginPath();
+    ctx.moveTo((p1_x), p1_y);
+    ctx.lineTo(wdt-mrg, p1_y - t * (1 - p1_l) * (wdt-2*mrg));
+    ctx.moveTo((p1_x), p1_y);
+    ctx.lineTo(mrg, p1_y - t * (p1_l) * (wdt-2*mrg));
+    ctx.stroke();
+
+    //p2 trans cost
+    ctx.strokeStyle = "#ada9a9"; 
+    ctx.setLineDash([0,0]); // no dashed lines
+    ctx.beginPath();
+    ctx.moveTo((p2_x), p2_y);
+    ctx.lineTo(mrg, p2_y - t * (p2_l) * (wdt-2*mrg));
+    ctx.moveTo((p2_x), p2_y);
+    ctx.lineTo(wdt-mrg, p2_y - t * (1-p2_l) * (wdt-2*mrg));
+    ctx.stroke();
+
+    // boundary/intersection line
+    ctx.strokeStyle = "#ada9a9"; 
+    ctx.beginPath();
+    ctx.setLineDash([10, 5]);//dashed lines    
     ctx.moveTo((mrg + ((wdt-2*mrg) * boundary)), mrg);
     ctx.lineTo((mrg + ((wdt-2*mrg) * boundary)), mrg+wdt);
     ctx.stroke();
+
 
 
   }
