--- a/hotellingmarkup_01_4p/templates/hotellingmarkup_01_4p/Intro.html
+++ b/hotellingmarkup_01_4p/templates/hotellingmarkup_01_4p/Intro.html
@@ -19,19 +19,24 @@
           href="{% static 'global/matrix.css' %}"/>
 
 
-    <p><br>
-    ...
-    </p>
+    <h3>
+    Please wait, the period will start shortly. 
+    </h2>
     
     <p>
-    </p>
-
-        <h4 align="right" ><font color="#f4f4f4">
-            t:{{treatment_t}}</font>
-         </h4>
-
+        <br>
+    </p> 
 
 </div>
+
+        <h4 align="right" ><font color="f7f7f7">
+            t:{{treatment_t}} - 
+            paid:{{paid_period}} - 
+            p1_l:{{p1_loc}} -  
+            p2_l:{{p2_loc}} -  
+            p3_l:{{p3_loc}} -  
+            p4_l:{{p4_loc}}</font>
+         </h4>
 
 {% if debug %}
 debug mode only 
